--- a/public/main.css
+++ b/public/main.css
@@ -91,6 +91,11 @@ div.hero h2 {
     margin: 20px;
 }
 
+#myChart { 
+    width:300px; 
+    height: 300px; 
+}
+
 @media screen and (min-width: 768px) {
     .container .div.text-box {
         margin: 10px;
