--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -1,5 +1,7 @@
 <div class="container center">
   <div class="page-area">
+    <!--Added bread crumbs tag-->
+    <pb-breadcrumbs></pb-breadcrumbs>
 
 
       <!-- This is a Semantic HTML Change -->
