completed point 4 in instructions

--- a/personal-budget/src/app/menu/menu.component.html
+++ b/personal-budget/src/app/menu/menu.component.html
@@ -5,6 +5,7 @@
           <li><a [routerLink]="['/']" aria-label="Home">Homepage</a></li>
           <li><a [routerLink]="['/about']" aria-label="About Us">About</a></li>
           <li><a [routerLink]="['/login']" aria-label="Login Page">Login</a></li>
+          <li><a [routerLink]="['/contact']" aria-label="Contact Page">Contact</a></li>
       </ul>
   </div>
 </header>
