--- a/personal-budget/src/app/homepage/homepage.component.html
+++ b/personal-budget/src/app/homepage/homepage.component.html
@@ -33,18 +33,18 @@
       </pb-article>
       <!-- This is a Semantic HTML Change -->
 
-      <pb-article>
+      <article>
         <h1>Chart</h1>
-        <p paragraph>
+
           <!-- Ensure the canvas element has defined width/height in HTML -->
           <canvas id="myChart" width="300" height="300"></canvas>
-        </p>
-      </pb-article>
 
-      <pb-article>
+      </article>
+
+      <article>
           <h1>D3.js Chart</h1>
-          <svg id="d3-chart" width="400" height="400"></svg>
-      </pb-article>
+          <div id="d3-chart"></div>
+      </article>
 
   </div>
 
